--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -101,6 +101,7 @@
               </div>
             </li>
           </ul>
+          <div class="loading-more" v-show="isLoading"><span></span></div>
         </div>
         <div class="js-show-find category-guid" style="display: none;"></div>
       </div>
